add support for uploading rental agreements #minor
