# app/controllers/rentals_controller.rb
@@ -1,6 +1,7 @@
 class RentalsController < AuthenticationController
     include FastQuery
-    before_action :set_rental, only: [:show]
+    include ::Service::GoogleDrive
+    before_action :set_rental, only: [:show, :update]
 
   def index
     @rentals = Rental.where(member_id: current_member.id)
@@ -11,9 +12,33 @@ class RentalsController < AuthenticationController
     render json: @rental and return
   end
 
-private
+  def update
+    # Non admins can only update themselves
+    @member = @rental.member
+    raise Error::Forbidden.new unless @member.id == current_member.id
+    raise ActionController::ParameterMissing.new(:signature) if update_params[:signature].nil?
+
+    begin
+      encoded_signature = update_params[:signature].split(",")[1]
+      if encoded_signature
+        upload_document("rental_agreement", @member, { rental: @rental }, encoded_signature)
+        MemberMailer.send_document("rental_agreement", @member.id.as_json, encoded_signature).deliver_later
+        @rental.update_attributes!(contract_on_file: true)
+      end
+    rescue Error::Google::Upload => err
+      @messages.push("Error uploading #{@member.fullname}'s rental agreement signature'. Error: #{err}")
+    end
+
+    render json: @rental and return
+  end
+
+  private
   def set_rental
     @rental = Rental.find(params[:id])
     raise ::Mongoid::Errors::DocumentNotFound.new(Rental, { id: params[:id] }) if @rental.nil?
+  end
+
+  def update_params
+    params.require(:rental).permit(:signature)
   end
 end
